@@ -67,6 +67,11 @@
 
 function [param, lnv] = stk_param_init (model, varargin)
 
+if ~ isstruct (model)
+    stk_error (['The first input argument does not look like ' ...
+        'a valid STK model structure.'], 'InvalidArgument');
+end
+
 cov_list = { ...
     'stk_expcov_iso', ...
     'stk_expcov_aniso', ...
